# app/district/district.handler.go
@@ -72,3 +72,34 @@ func (h handler) Page(c echo.Context) error {
 
 	return response.Success(http.StatusOK, "success", response.PayloadPagination(req, data, count)).SendJSON(c)
 }
+
+// List
+// @Tags District
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param req query request.ListDistrict false "query string"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /district/list [get]
+func (h handler) List(c echo.Context) error {
+	var err error
+
+	req := new(request.ListDistrict)
+	if err = c.Bind(req); err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	if err = c.Validate(req); err != nil {
+		return response.Error(http.StatusBadRequest, "error validation", response.ValidationError(err)).SendJSON(c)
+	}
+
+	data, err := h.usecase.List(req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), response.Payload{}).SendJSON(c)
+	}
+
+	res := response.Districts(data)
+
+	return response.Success(http.StatusOK, "success", res).SendJSON(c)
+}
